[package]
name = "gtfs-translations"
version = "0.1.0"
description = "Reads GTFS translations.txt into structures"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
csv = "1.3.0"
derivative = "2.2.0"
gtfs-structures = "0.41.0"
language-tags = "0.3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
tokio = {version = "1.36", features = ["full"]}
reqwest = {version = "0.11"}
zip = {version = "0.6.6"}